# fmp-palyground

./: .env.example  .gitignore  README.md  example.py  pyproject.toml
assets/: CN_SHH_companies.json  CN_SHZ_companies.json  HK_HKSE_companies.json  JP_JPX_companies.json  KR_KOE_companies.json  KR_KSC_companies.json  US_AMEX_companies.json  US_NASDAQ_companies.json  US_NYSE_companies.json  exchanges.json  exchanges_by_country.json  us_companies.json
data/: .lakefs_ref.yaml
docs/: financial_statements_api.md  project_documentation.md  supported_countries.md
scripts/: fetch_all_companies_data.py  fetch_financial_data.py  fetch_kr_financial_data.py  get_companies_by_country.py  get_countries.py  get_exchanges.py  get_us_companies.py
src/fmp_palyground/: __init__.py
src/fmp_playground/: fetch_financial_data.py
