[project]
name = "fmp-palyground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sangwon Lee", email = "lsw91.main@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
